src/main/openshift/deploymentConfig.yml
#oc import-image @project.artifactId@:@project.version@ --from=docker.io/tadartiw/@project.artifactId@:@project.version@ --confirm
#oc import-image @project.artifactId@:@project.version@
#oc create -f @project.build.directory@/openshift/deploymentConfig.yml

kind: "DeploymentConfig"
apiVersion: "v1"
metadata:
  name: "@project.artifactId@"
spec:
  template:
    metadata:
      labels:
        name: "@project.artifactId@"
    spec:
      containers:
        - name: "@project.artifactId@"
          image: "@docker.remote.registry@/@project.artifactId@"
          volumeMounts:
            - mountPath: /app/config
              name: @project.artifactId@-config-volume
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 60
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
      volumes:
        - configMap:
            defaultMode: 420
            name: @project.artifactId@-config
            items:
              - key: application.yaml
                path: application.yaml
          name: @project.artifactId@-config-volume
  replicas: 1
  triggers:
    - type: "ConfigChange"
    - type: "ImageChange"
      imageChangeParams:
        automatic: true
        containerNames:
          - "@project.artifactId@"
        from:
          kind: "ImageStreamTag"
          name: "@project.artifactId@:@project.version@"
  strategy:
    type: "Rolling"
  paused: false
  revisionHistoryLimit: 2
  minReadySeconds: 0
