src/main/openshift/route.yml
#oc create -f @project.build.directory@/openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: @project.artifactId@-route
spec:
  to:
    kind: Service
    name: @project.artifactId@
    weight: 100
  wildcardPolicy: None
